# SmartLog

./: CMakeLists.txt  CountRetCode.cpp  CountRetCode.h  FindLogFunc.cpp  FindLogFunc.h  FindLoggedSnippet.cpp  FindLoggedSnippet.h  FindLoggedSnippet.hpp  FindLoggingFunction.cpp  FindLoggingFunction.h  FindLoggingFunction.hpp  FindOutputSnippet.cpp  FindOutputSnippet.h  FindPatternSnippet.cpp  FindPatternSnippet.h  FuncCondInfo.cpp  FuncCondInfo.h  FuncLogInfo.cpp  FuncLogInfo.h  InsertLog.cpp  InsertLog.h  Makefile  MyTool.cpp  MyTool.h  MyTool.hpp  README.md  RecordCond.cpp  RecordCond.h
data/: diff.xlsx  sample_result.out  table 2.xlsx  table 3.xlsx
data/figure 11 & table 6/: README  emulate.py  gimp_pattern_snippet.out  postgre_pattern_snippet.out  svn_pattern_snippet.out
data/figure 4/: log semantics
data/figure 6/: log usage
data/figure10&table7/: http_pattern_snippet.out  mysql_pattern_snippet.out  wire_pattern_snippet.out
data/figure3/: README
data/figure5/: README
data/logging function/: bftpd_result.xlsx  gimp_result.xlsx  httpd_result.xlsx  mysql_result.xlsx  postgresql_result.xlsx  (+4 more)
doc/: README
script/: call_dependence.sh  extract_command.pl  patch.py  sample.py  smartlog.sh
src/: FindKeywordFunction.cpp  FindKeywordFunction.h  FindLoggedSnippet.cpp  FindLoggedSnippet.h  FindLoggingBehavior.cpp  FindLoggingFunction.cpp  FindLoggingFunction.h  FindOutputSnippet.cpp  FindOutputSnippet.h  FindPatternSnippet.cpp  FindPatternSnippet.h  InsertLog.cpp  InsertLog.h  LogTimes.cpp  LogTimes.h  SmartLog.cpp  SmartLog.h
test/: bftpd-3.2.tar
(+61 files in other folders)
